added conditional for checking if yes/no button or open webview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
         <service
             android:name=".BeaconTrackingService"
             android:exported="false" />
+
+        <activity
+            android:name=".BeaconInfoActivity"
+            android:label="@string/title_activity_beacon_info" >
+        </activity>
     </application>
 
 </manifest>
